--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mobiscroll/react": "npm:@mobiscroll/react-next-trial@^5.34.3",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
