--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@mobiscroll/react": "npm:@mobiscroll/react-next-trial@^5.34.3",
-    "react": "^19.1.0",
+    "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
+    "router-dom": "^3.0.3",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
